attendee html correction

--- a/attendee.html
+++ b/attendee.html
@@ -42,11 +42,13 @@
       <div class="details">
         <div class="upload">
           <span>Upload Profile Photo</span>
-          <div id="dark-border"></div>
-          <input id="file" type="file" hidden />
-          <label for="file"
-            ><img src="images/Section Title.png" alt=""
-          /></label>
+
+          <div class="inp">
+            <input id="file" type="file" hidden />
+            <label for="file"
+              ><img src="images/Section Title.png" alt=""
+            /></label>
+          </div>
         </div>
         <div class="hr"></div>
         <div class="inputs">
