added image storage

--- a/book.html
+++ b/book.html
@@ -42,7 +42,8 @@
       <div class="head-text">
         <h1>Your Ticket Is Booked!</h1>
         <span
-          >Check your email for a copy or you can <a href="">download</a></span
+          >Check your email for a copy or you can
+          <a class="tickets" href="">download</a></span
         >
       </div>
       <div class="ticket-border">
@@ -53,7 +54,7 @@
               📍 04 Rumens road, Ikoyi, Lagos <br />📅 March 15, 2025 | 7:00 PM
             </p>
           </div>
-          <img src="images/User.img.png" alt="" />
+          <img id="userImg" src="images/User.img.png" alt="" />
           <div class="data">
             <div class="input">
               <div id="one" class="form-group">
@@ -80,7 +81,7 @@
       </div>
       <div class="btns">
         <button id="book">Book Another Ticket</button>
-        <button id="tickets">Download Ticket</button>
+        <button class="ticket">Download Ticket</button>
       </div>
     </div>
     <script type="module" src="app.js"></script>
